# poetry-bench

./: Dockerfile  README.md  pyproject.toml
