[tool.poetry]
name = "ft-chatbot"
version = "0.1.0"
description = ""
authors = ["to104676 <vincent.v.malet@airbus.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "0.3.7"
duckdb="1.0.0"
openai = "^1.35.6"
langchain-community = "0.3.5"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
jupyterlab = "^4.2.3"
transformers = "^4.41.2"
langchain-openai = "0.2.5"
llama-index = "^0.10.50"
docx2txt = "^0.8"
llama-index-llms-openai-like = "^0.1.3"
pyarrow = "^16.1.0"
deprecation = "^2.1.0"
chainlit = "^1.1.305"
duckdb-engine = "0.13.0"
sqlalchemy="2.0.31"
greenlet="3.0.3"
pandas="1.5.3"
langchain-huggingface = "^0.1.1"
langchain-chroma = "^0.1.4"
torch="2.2.0"
langgraph = "^0.2.53"
langchain-google-vertexai = "^2.0.8"
pysqlite3-binary = {version = "0.5.3", platform = "linux"}
python-ldap = "3.4.3"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
tabulate = "^0.9.0"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

